Fixed bug with overflow hiding products and not allowing a user to scroll.

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -6,7 +6,6 @@ body {
   height: 100vh;
   width: 100vw;
   font-family: 'Pathway Gothic One', sans-serif;
-  overflow: hidden;
 }
 
 canvas {
